# deepin-installer-reborn

./: .clog.toml  .gitignore  CHANGELOG.md  CMakeLists.txt  ChangeLog.txt  README.md  application.cpp  application.h  main.cpp
check_hooks/: CMakeLists.txt  basic_utils.sh  check_start.sh  lightdm-start.sh  lightdm-stop.sh
check_hooks/after_check/: 99_disable_check_mode.job
check_hooks/before_check/: 02_create_in_check_file.job
data/: CMakeLists.txt  lightdm-installer-greeter.desktop
data/live-boot/: 9991-override-check-dev.sh
data/live-config/: 1080-deepin-installer-launcher  1081-deepin-auto-install  1082-deepin-livecd
data/systemd/: deepin-installer-auto-install.service  deepin-installer-first-boot.service  deepin-installer-preload.service  deepin-installer.service  deepin-installer.target
data/systemd/systemd-timesyncd.service.d/: disable-timesyncd-with-installer.conf
live/: CMakeLists.txt
live/live-boot/: 1001-disable-timesyncd.sh  9991-disable-timesyncd.sh  9991-override-check-dev.sh
live/live-config/: 1080-deepin-installer-launcher  1080-deepin-installer-reborn-launcher  1080deepin-installer-reborn  1081-deepin-auto-install  1081deepin-auto-install  1082-deepin-livecd  1082deepin-livecd
resources/: CMakeLists.txt  arm_default_settings.ini  com.deepin.pkexec.installer-first-boot.policy  com.deepin.pkexec.installer.policy  deepin-installer-oem.desktop  deepin-installer-reborn.desktop  deepin-installer.desktop  default-settings.ini  default_settings.ini  disable-timesyncd-with-installer.conf  languages.json  loongson_default_settings.ini  misc.qrc  oem_settings.json  professional_default_settings.ini  resources.qrc  select_machine_kernel.json  select_services_packages.json  sw_cpu_select.py  sw_default_settings.ini  sw_gui2sh.py  timezone_alias
resources/slide/: CMakeLists.txt  README.md
resources/slide/default/: images.json
resources/slide/zh_CN/: images.json
resources/slide/zh_TW/: images.json
src/: CMakeLists.txt
src/app/: deepin-installer-first-boot-pkexec  deepin-installer-pkexec  deepin_installer.cpp  deepin_installer_first_boot.cpp  deepin_installer_oem.cpp  deepin_installer_settings.cpp  deepin_installer_unsquashfs.cpp  deepin_installer_user_form.cpp  reboot_system.cpp  root_unittest_main.cpp  unittest_main.cpp
src/base/: auto_screen_scale.h  command.cpp  command.h  command_test.cpp  consts.h  file_util.cpp  file_util_test.cpp  string_util_test.cpp  thread_util.h
src/license/: deepin-end-user-license-agreement_en_US.txt  deepin-end-user-license-agreement_zh_CN.txt  license.qrc
src/oem/models/: oem_settings_item.cpp  oem_settings_item.h  oem_settings_model.cpp
src/oem/styles/: styles.qrc
src/oem/views/: oem_settings_item_view.cpp
src/partman/: device.cpp  device.h  fs.cpp  fs.h  libparted_util.cpp  libparted_util.h  operation.cpp  operation.h  operation_root_test.cpp  operation_test.cpp  os_prober.cpp  os_prober_test.cpp  partition.cpp  partition.h  partition_format.cpp  partition_format.h  partition_manager.cpp  partition_test.cpp  partition_usage_test.cpp  structs.cpp  structs.h  utils.cpp
src/service/: first_boot_hook_worker.h  hooks_manager.cpp  hooks_manager.h  power_manager.h  process_util.cpp  process_util.h  screen_brightness.cpp  screen_brightness.h  settings_manager.cpp  settings_manager.h  settings_name.h  system_language.h  timezone_manager.h  timezone_manager_test.cpp
src/service/backend/: chroot.cpp  geoip_request_worker.h  hook_worker.cpp  hooks_pack.cpp  hooks_pack_test.cpp  wifi_inspect_worker.h
src/sysinfo/: dev_disk.h  dev_disk_test.cpp  iso3166_test.cpp  keyboard.cpp  keyboard.h  machine.cpp  proc_meminfo.cpp  proc_meminfo.h  proc_mounts.cpp  proc_mounts.h  proc_mounts_test.cpp  proc_partitions.cpp  proc_partitions.h  proc_partitions_test.cpp  proc_swaps.cpp  proc_swaps.h  release_version.h  timezone.cpp  timezone.h  timezone_test.cpp  validate_hostname.cpp  validate_hostname.h  validate_password.cpp  validate_password.h  validate_password_test.cpp  virtual_machine.cpp
src/ui/: first_boot_setup_window.cpp  first_boot_setup_window.h  main_window.cpp  main_window.h  user_form_window.cpp  user_form_window.h
src/ui/delegates/: advanced_partition_animations.cpp  advanced_partition_delegate.cpp  advanced_partition_delegate.h  advanced_validate_state.cpp  advanced_validate_state.h  avatar_list_delegate.cpp  avatar_list_delegate.h  frameless_list_delegate.cpp  frameless_list_delegate.h  full_disk_delegate.cpp  full_disk_delegate.h  full_disk_partition_delegate.cpp  full_disk_partition_delegate.h  install_slide_frame_util.cpp  installer_args_parser.cpp  installer_args_parser.h  installer_args_parser_test.cpp  language_delegate.cpp  main_window_util.cpp  main_window_util.h  partition_util.cpp  partition_util.h  popup_menu_delegate.h  simple_partition_delegate.cpp  simple_partition_delegate.h  table_combo_box_delegate.cpp  timezone_map_util.cpp  timezone_map_util_test.cpp
src/ui/frames/: consts.h  control_panel_frame.cpp  control_panel_frame.h  control_platform_frame.cpp  control_platform_frame.h  disk_space_insufficient_frame.h  dynamic_disk_warning_frame.cpp  dynamic_disk_warning_frame.h  first_boot_loading_frame.h  install_failed_frame.cpp  install_failed_frame.h  install_progress_frame.cpp  install_progress_frame.h  install_success_frame.cpp  install_success_frame.h  language_frame.cpp  language_frame.h  networkframe.cpp  networkframe.h  partition_frame.cpp  partition_frame.h  select_language_frame.cpp  select_language_frame.h  system_info_frame.cpp  timezone_frame.cpp  timezone_frame.h  user_agreement_frame.cpp  user_agreement_frame.h
src/ui/images/: images.qrc
src/ui/models/: bootloader_list_model.cpp  bootloader_list_model.h  control_platform_region_model.cpp  control_platform_region_model.h  fs_model.cpp  keyboard_layout_model.cpp  keyboard_layout_model.h  keyboard_layout_variant_model.cpp  keyboard_layout_variant_model.h  language_list_model.cpp  language_list_model.h  partition_model.cpp  partition_model.h
src/ui/styles/: advanced_partition_button.css  advanced_partition_frame.css  styles.qrc  (+21 more)
(+945 files in other folders)
